// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Insert Text: Foo Bar - Android. 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Foo Bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Insert Text: Foo Bar - Android. 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Foo Bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Insert Text: Hello World - Android. 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Hello World",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Insert Text: Hello World - Android. 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Hello World",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
